ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts.stderr
error[1182]: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:5:9
  |
5 |     var {};
  |         ^^

error[1182]: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:6:9
  |
6 |     let {};
  |         ^^

error[1182]: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:7:11
  |
7 |     const {};
  |           ^^

error[1155]: 'const' declarations must be initialized
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:7:11
  |
7 |     const {};
  |           ^^

error[1182]: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:9:9
  |
9 |     var [];
  |         ^^

error[1182]: Destructuring bindings require initializers
  --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:10:9
   |
10 |     let [];
   |         ^^

error[1182]: Destructuring bindings require initializers
  --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:11:11
   |
11 |     const [];
   |           ^^

error[1155]: 'const' declarations must be initialized
  --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:11:11
   |
11 |     const [];
   |           ^^

